<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.FavoriteActivity">

    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="Favorite"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoriteView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavContainer"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeading" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottomNavContainer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/bottomBtn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView android:layout_width="22dp" android:layout_height="22dp" android:src="@drawable/btn_1" app:tint="@color/black" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home" android:textColor="@color/black" android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bottomBtn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView android:layout_width="22dp" android:layout_height="22dp" android:src="@drawable/btn_2" app:tint="@color/purple" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/favorite" android:textColor="@color/purple" android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bottomBtn3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView android:layout_width="22dp" android:layout_height="22dp" android:src="@drawable/btn_3" app:tint="@color/black" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cart" android:textColor="@color/black" android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bottomBtn4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView android:layout_width="22dp" android:layout_height="22dp" android:src="@drawable/btn_4" app:tint="@color/black" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile" android:textColor="@color/black" android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>